--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-mirroring-wizard/cephfs-mirroring-wizard.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-mirroring-wizard/cephfs-mirroring-wizard.component.scss
@@ -1,5 +1,5 @@
-:host ::ng-deep cd-alert-panel.mirroring-alert cds-actionable-notification {
-  max-width: 77% !important;
+form {
+  max-width: 77%;
 }
 
 .list-disc {
