--- a/src/pybind/mgr/dashboard/frontend/src/styles/ceph-custom/_spacings.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles/ceph-custom/_spacings.scss
@@ -1,5 +1,6 @@
 @use '@carbon/layout';
 
+// PADDINGS
 .cds-p-0 {
   padding: 0;
 }
@@ -8,20 +9,13 @@
   padding-top: layout.$spacing-03;
 }
 
-.cds-ml-3 {
-  margin-left: layout.$spacing-03;
+// MARGINS
+.cds-m-0 {
+  margin: 0;
 }
 
-.cds-ml-5 {
-  margin-left: layout.$spacing-05;
-}
-
-.cds-mr-3 {
-  margin-right: layout.$spacing-03;
-}
-
-.cds-mr-5 {
-  margin-right: layout.$spacing-05;
+.cds-mb-0 {
+  margin-bottom: 0;
 }
 
 .cds-mb-1 {
@@ -54,4 +48,20 @@
 
 .cds-mt-6 {
   margin-top: layout.$spacing-06;
+}
+
+.cds-ml-3 {
+  margin-left: layout.$spacing-03;
+}
+
+.cds-ml-5 {
+  margin-left: layout.$spacing-05;
+}
+
+.cds-mr-3 {
+  margin-right: layout.$spacing-03;
+}
+
+.cds-mr-5 {
+  margin-right: layout.$spacing-05;
 }
