--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/tearsheet/tearsheet.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/tearsheet/tearsheet.component.html
@@ -25,7 +25,7 @@
       <!-- Tearsheet Influencer-->
       <div cdsCol
            [columnNumbers]="{'lg': 3, 'md': 3, 'sm': 3}"
-           class="tearsheet-influencer">
+           class="tearsheet-left-influencer">
         <cds-progress-indicator
           orientation="vertical"
           [steps]="steps"
@@ -92,12 +92,13 @@
   </header>
   <section cdsGrid
            class="tearsheet-body"
+           [condensed]="true"
            [useCssGrid]="true"
            [fullWidth]="true">
-    <!-- Tearsheet Influencer-->
+    <!-- Tearsheet Left Influencer-->
     <div cdsCol
-         [columnNumbers]="{'lg': 3, 'md': 3, 'sm': 3}"
-         class="tearsheet-influencer">
+         [columnNumbers]="{lg: 3, md: 3, sm: 3}"
+         class="tearsheet-left-influencer">
       <cds-progress-indicator
         orientation="vertical"
         [steps]="steps"
@@ -107,18 +108,38 @@
       </cds-progress-indicator>
     </div>
     <div cdsCol
-         [columnNumbers]="{'lg': 13, 'md': 13, 'sm': 13}"
+         [columnNumbers]="{lg: 13, md: 13, sm: 13}"
          class="tearsheet-main">
-      <!-- Tearsheet Content Area -->
-      <div class="tearsheet-content">
-      <ng-container
-        *ngTemplateOutlet="activeStepTemplate">
-      </ng-container>
+      @if (showRightInfluencer) {
+      <!-- Tearsheet content with right influencer  -->
+      <div
+        cdsGrid
+        [condensed]="true"
+        [useCssGrid]="true"
+        [fullWidth]="true">
+        <div
+          cdsCol
+          class="tearsheet-content"
+          [columnNumbers]="{ lg: 10 }">
+          <ng-container *ngTemplateOutlet="activeStepTemplate"></ng-container>
+        </div>
+        <aside
+          cdsCol
+          [columnNumbers]="{ lg: 3 }"
+          class="tearsheet-right-influencer">
+          <ng-container *ngTemplateOutlet="rightInfluencerTemplate"></ng-container>
+        </aside>
       </div>
+      }
+      @else {
+      <!-- Tearsheet content without right influencer -->
+      <div class="tearsheet-content">
+        <ng-container *ngTemplateOutlet="activeStepTemplate"></ng-container>
+      </div>
+      }
       <!-- Tearsheet Footer -->
       <cds-modal-footer class="tearsheet-footer">
         <button cdsButton="ghost"
-                class="tearsheet-footer-cancel"
                 (click)="closeTearsheet()"
                 size="xl"
                 i18n>Cancel</button>
@@ -140,7 +161,7 @@
             [overlay]="false"
             size="sm">
           </cds-loading>
-           {{submitButtonLoadingLabel}}...
+            {{submitButtonLoadingLabel}}...
           }
           @else {
             {{submitButtonLabel}}
