mgr/dashboard: Add storage card to overview page
Fixes https://tracker.ceph.com/issues/73318

Signed-off-by: Afreen Misbah <afreen@ibm.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/overview.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/overview.component.html
@@ -20,13 +20,8 @@
        [narrow]="true">
     <div cdsCol
          class="cds-mb-5"
-         [columnNumbers]="{lg: 11}">
-      <cds-tile>Storage card</cds-tile>
-    </div>
-    <div cdsCol
-         class="cds-mb-5"
-         [columnNumbers]="{lg: 5}">
-      <cds-tile>Docs card</cds-tile>
+         [columnNumbers]="{lg: 16}">
+      <cd-overview-storage-card></cd-overview-storage-card>
     </div>
   </div>
   <div cdsRow>
