--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/storage-card/overview-storage-card.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/storage-card/overview-storage-card.component.html
@@ -16,10 +16,10 @@
     <h5>
       <span
         class="cds--type-heading-05"
-        i18n>200{{' '}}</span>
+        i18n>{{usedRaw}}{{' '}}</span>
       <span
         class="cds--type-body-02"
-        i18n>TB of 1300 TB used</span>
+        i18n>{{usedRawUnit}} of {{totalRaw}} {{totalRawUnit}} used</span>
     </h5>
     <cds-tooltip
       [autoAlign]="true"
