mgr/dashboard: use gray10 theme colors
- sidenav, header , table - white
- background - gray

Signed-off-by: Afreen Misbah <afreen@ibm.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/nvmeof-gateway-node/nvmeof-gateway-node-add-modal/nvmeof-gateway-node-add-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/nvmeof-gateway-node/nvmeof-gateway-node-add-modal/nvmeof-gateway-node-add-modal.component.html
@@ -29,7 +29,7 @@
         <div
           class="cds--type-label-01"
           i18n>
-          Nodes to run NVMe-oF target pods/services
+          Nodes to run NVMe-oF target service
         </div>
       </div>
 
