--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/storage-card/overview-storage-card.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/storage-card/overview-storage-card.component.html
@@ -1,28 +1,41 @@
 <cd-productive-card
-  title="Storage overview"
-  i18n-title>
+  headerTitle="Storage overview"
+  i18n-headerTitle>
+  <!-- STORAGE CARD HEADER DROPDOWN -->
   <ng-template #headerAction>
     <cds-dropdown
       label="Storage type"
       class="overview-storage-card-dropdown"
       i18n-label
       size="sm"
+      [disabled]="!(displayData && usedRaw && totalRaw && usedRawUnit && totalRawUnit)"
       [placeholder]="selectedStorageType"
       (selected)="onStorageTypeSelect($event)">
       <cds-dropdown-list [items]="dropdownItems"></cds-dropdown-list>
     </cds-dropdown>
   </ng-template>
-  <div class="overview-storage-card-chart-header">
+  <!-- CAPACITY USAGE TEXT AND RAW CAPACITY TOGGLE-->
+  <div class="overview-storage-card-usage-text">
+    @if(usedRaw && totalRaw && usedRawUnit && totalRawUnit) {
     <h5>
       <span
         class="cds--type-heading-05"
-        i18n>{{usedRaw}}{{' '}}</span>
+        i18n>{{usedRaw}}&ngsp;</span>
       <span
         class="cds--type-body-02"
         i18n>{{usedRawUnit}} of {{totalRaw}} {{totalRawUnit}} used</span>
     </h5>
+    }
+    @else {
+    <cds-skeleton-text
+      [lines]="1"
+      [minLineWidth]="400"
+      [maxLineWidth]="400">
+    </cds-skeleton-text>
+    }
     <cds-checkbox
       [checked]="isRawCapacity"
+      [disabled]="!(displayData && usedRaw && totalRaw && usedRawUnit && totalRawUnit)"
       (checkedChange)="toggleRawCapacity($event)">
       <cds-tooltip-definition
         [autoAlign]="true"
@@ -38,8 +51,23 @@
       </cds-tooltip-definition>
     </cds-checkbox>
   </div>
+  <!-- CAPACITY CHART -->
+  @if(displayData) {
   <ibm-meter-chart
     [options]="options"
     [data]="displayData"
     class="overview-storage-card-chart"></ibm-meter-chart>
+  }
+  @else {
+  <cds-skeleton-text
+    [lines]="1"
+    [minLineWidth]="1025"
+    [maxLineWidth]="1025">
+  </cds-skeleton-text>
+  <cds-skeleton-text
+    [lines]="1"
+    [minLineWidth]="200"
+    [maxLineWidth]="200">
+  </cds-skeleton-text>
+  }
 </cd-productive-card>
