--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/productive-card/productive-card.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/productive-card/productive-card.component.html
@@ -8,7 +8,7 @@
          class="productive-card-header-row">
       <div cdsCol
            [columnNumbers]="{sm: headerActionTemplate ? 12 : 16, md: headerActionTemplate ? 12 : 16, lg: headerActionTemplate ? 12 : 16}">
-        <h2 class="cds--type-heading-compact-02">{{title}}</h2>
+        <h2 class="cds--type-heading-compact-02">{{headerTitle}}</h2>
       </div>
       @if(!!headerActionTemplate) {
       <div cdsCol
