mgr/dashboard: NVme-gateway-resource
Fixes: https://tracker.ceph.com/issues/74334

Signed-off-by: Sagar Gopale <sagar.gopale@ibm.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/nvmeof-gateway-node/nvmeof-gateway-node.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/nvmeof-gateway-node/nvmeof-gateway-node.component.html
@@ -1,21 +1,26 @@
-
-<cd-table
-  #table
-  [data]="hosts"
-  [columns]="columns"
-  columnMode="flex"
-  (fetchData)="getHosts($event)"
-  selectionType="multiClick"
-  [searchableObjects]="true"
-  [serverSide]="false"
-  [maxLimit]="25"
-  (updateSelection)="updateSelection($event)"
-  emptyStateTitle="No nodes available"
-  i18n-emptyStateTitle
-  emptyStateMessage="Add your first gateway node to start using NVMe over Fabrics. Nodes provide the resources required to expose NVMe/TCP block storage."
-  i18n-emptyStateMessage
->
-</cd-table>
+<div>
+  <cd-table
+    #table
+    [data]="hosts"
+    [columns]="columns"
+    columnMode="flex"
+    (fetchData)="getHosts($event)"
+    [selectionType]="selectionType"
+    [searchableObjects]="true"
+    [serverSide]="false"
+    [maxLimit]="25"
+    identifier="hostname"
+    forceIdentifier="true"
+    (updateSelection)="updateSelection($event)"
+  >
+    <cd-table-actions
+      class="table-actions"
+      [permission]="permission"
+      [selection]="selection"
+      [tableActions]="tableActions">
+    </cd-table-actions>
+  </cd-table>
+</div>
 
 <ng-template
   #addrTpl
@@ -30,6 +35,7 @@
   let-value="data.value"
   let-row="data.row"
 >
+@if (value) {
   <div
     [cdsStack]="'horizontal'"
     gap="4"
@@ -37,10 +43,11 @@
   @if (value === HostStatus.AVAILABLE) {
     <cd-icon type="success"></cd-icon>
   }
-
   <span class="cds-ml-3">{{ value | titlecase }}</span>
   </div>
-
+} @else {
+  <span>-</span>
+}
 </ng-template>
 
 <ng-template #labelsTpl
