mgr/dashboard: Removed Raw capacity toggle
- removed raw capacity toggle
- updated tests
- added polling for promethues queries
- added tests for formatter service functions

Signed-off-by: Afreen Misbah <afreen@ibm.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/overview.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/overview/overview.component.html
@@ -23,8 +23,8 @@
          [columnNumbers]="{lg: 16}">
       @if (healthData$ | async; as healthData) {
       <cd-overview-storage-card
-        [total]="healthData?.pgmap.bytes_total"
-        [used]="healthData?.pgmap.bytes_used">
+        [total]="healthData.pgmap.bytes_total"
+        [used]="healthData.pgmap.bytes_used">
       </cd-overview-storage-card>
       }
     </div>
